--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.1;netstandard2.0;net45;netcoreapp1.0</TargetFrameworks>
-    <Version>3.3</Version>
+    <Version>4.0-alpha</Version>
     <Company>Tyrrrz</Company>
     <Authors>$(Company)</Authors>
     <Copyright>Copyright (C) 2016-2017 Alexey Golub</Copyright>
