API and model rework (#70)
* Refactor media streams and closed captions extraction out of YoutubeClient.Video

* Tests and some cleanup

* Add support for CCs parsing with new ugly format

* Fix exceptions not being thrown properly

* Remove extended metadata for now

* Add wip GetVideoChannelAsync

* Can't get channel banner URL

* Add Json.Net

* Bring back IsAutoGenerated for CCs

* Descriptions and likes/dislikes work!

* Start cleaning up

* More cleanup

* More renames

* Fix DemoConsole

* Fix WPF demo

* Improve exception messages

* Add author to PlaylistVideo

* Fix tests

* Make GetVideoAuthorChannelAsync throw on unavailable videos

* Fix some spelling issues

* Update readme

* Remove PlaylistVideo as it's the same as Video now

* Add some comments

* Rename VideoThumbnails to ThumbnailSet to be more consistent with MediaStreamInfoSet

* Add ignore case

* Drop strict selectors

* Enforce format=1 on closed caption track URLs

* Internal rename

* Only retry get_video_info if the error is embedding

* Update readme

* Replace adunit with detailpage

* Clenaup

* If likes = 0 and dislikes = 0, avg rating is also 0

* Use format=3 on closed captions to avoid decoding

--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.1;netstandard2.0;net45;netcoreapp1.0</TargetFrameworks>
-    <Version>3.3</Version>
+    <Version>4.0-alpha</Version>
     <Company>Tyrrrz</Company>
     <Authors>$(Company)</Authors>
     <Copyright>Copyright (C) 2016-2017 Alexey Golub</Copyright>
@@ -20,6 +20,11 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
     <Reference Include="System.Net.Http" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.9.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
 </Project>
