--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="[0.9.11]" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="ConfigureAwait.Fody" Version="3.1.0" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
