--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ image: Visual Studio 2017
 configuration: Release
 
 before_build:
-- dotnet restore
+- ps: nuget restore
 
 build:
   verbosity: minimal
