--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="AngleSharp" Version="[0.9.11]" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="ConfigureAwait.Fody" Version="3.1.0" PrivateAssets="all" />
+    <PackageReference Include="Fody" Version="4.2.1" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
