--- a/DemoConsole/DemoConsole.csproj
+++ b/DemoConsole/DemoConsole.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net45</TargetFramework>
     <OutputType>Exe</OutputType>
     <ApplicationIcon>..\favicon.ico</ApplicationIcon>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
