--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -32,7 +32,7 @@
     <PackageReference Include="AngleSharp" Version="0.12.1" />
   </ItemGroup>
   
-  <ItemGroup Condition="'$(TargetFramework)' != 'netstandard1.1'">
+  <ItemGroup Condition="'$(TargetFramework)' != 'netstandard1.1' AND '$(TargetFramework)' != 'netstandard1.3'">
     <PackageReference Include="ConfigureAwait.Fody" Version="3.1.0" PrivateAssets="all" />
     <PackageReference Include="Fody" Version="4.2.1" PrivateAssets="all" />
   </ItemGroup>
