--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,7 +19,9 @@ jobs:
         dotnet-version: 3.0.100
 
     - name: Pack
-      run: dotnet pack --configuration Release
+      run: dotnet pack YoutubeExplode --configuration Release
 
     - name: Deploy
-      run: dotnet nuget push YoutubeExplode/bin/Release/*.nupkg -s nuget.org -k ${{secrets.NUGET_TOKEN}}
+      run: |
+        dotnet nuget push YoutubeExplode/bin/Release/*.nupkg -s nuget.org -k ${{secrets.NUGET_TOKEN}}
+        dotnet nuget push YoutubeExplode/bin/Release/*.snupkg -s nuget.org -k ${{secrets.NUGET_TOKEN}}
