--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,6 +22,4 @@ jobs:
       run: dotnet pack YoutubeExplode --configuration Release
 
     - name: Deploy
-      run: |
-        dotnet nuget push YoutubeExplode/bin/Release/*.nupkg -s nuget.org -k ${{secrets.NUGET_TOKEN}}
-        dotnet nuget push YoutubeExplode/bin/Release/*.snupkg -s nuget.org -k ${{secrets.NUGET_TOKEN}}
+      run: dotnet nuget push YoutubeExplode/bin/Release/*.nupkg -s nuget.org -k ${{secrets.NUGET_TOKEN}}
