--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -16,6 +16,7 @@
     <EmbedUntrackedSources>True</EmbedUntrackedSources>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Version>5.1.3</Version>
   </PropertyGroup>
   
   <!-- Disable nullability warnings on older frameworks because there is no nullability info for BCL -->
