--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,9 @@ jobs:
           dotnet-version: 5.0.x
 
       - name: Build & test
-        run: dotnet test --configuration Release --logger GitHubActions
+        run: |
+          dotnet nuget locals all --clear
+          dotnet test --configuration Release --logger GitHubActions
 
       - name: Upload coverage
         uses: codecov/codecov-action@v1.0.5
