--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,9 +19,7 @@ jobs:
           dotnet-version: 5.0.x
 
       - name: Pack
-        run: |
-          dotnet nuget locals all --clear
-          dotnet pack YoutubeExplode --configuration Release
+        run: dotnet pack YoutubeExplode --configuration Release
 
       - name: Deploy
         run: dotnet nuget push YoutubeExplode\bin\Release\*.nupkg -s nuget.org -k ${{ secrets.NUGET_TOKEN }}
