--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -23,3 +23,9 @@ jobs:
 
       - name: Deploy
         run: dotnet nuget push YoutubeExplode\bin\Release\*.nupkg -s nuget.org -k ${{ secrets.NUGET_TOKEN }}
+
+      - name: Notify Discord
+        run: |
+          curl '${{ secrets.DISCORD_WEBHOOK }}' \
+            --data-raw '{"content":"[**YoutubeExplode** ver. ${{ github.ref }} released](https://github.com/Tyrrrz/YoutubeExplode/releases/latest)"}' \
+            -H 'content-type: application/json'
