Use powershell for Discord webhook

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -26,6 +26,10 @@ jobs:
 
       - name: Notify Discord
         run: |
-          curl '${{ secrets.DISCORD_WEBHOOK }}' \
-            --data-raw '{"content":"[**YoutubeExplode** ver. ${{ github.ref }} released](https://github.com/Tyrrrz/YoutubeExplode/releases/latest)"}' \
-            -H 'content-type: application/json'
+          Invoke-WebRequest `
+           -Uri "${{ secrets.DISCORD_WEBHOOK }}" `
+           -Method "POST" `
+           -ContentType "application/json; charset=UTF-8" `
+           -Body "{`"content`":`"[**YoutubeExplode** ver. ${{ github.ref }} released](https://github.com/Tyrrrz/YoutubeExplode/releases/latest)`"}" `
+           -UseBasicParsing
+        shell: pwsh
