--- a/YoutubeExplode.Converter/YoutubeExplode.Converter.csproj
+++ b/YoutubeExplode.Converter/YoutubeExplode.Converter.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.1;netstandard2.0;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0;netstandard2.1;netstandard2.0;net461;netcoreapp3.0</TargetFrameworks>
     <Description>Extension for YoutubeExplode that provides an interface to download and convert videos using FFmpeg</Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
