--- a/YoutubeExplode.Converter.Tests/YoutubeExplode.Converter.Tests.csproj
+++ b/YoutubeExplode.Converter.Tests/YoutubeExplode.Converter.Tests.csproj
@@ -11,13 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CliWrap" Version="3.3.3" />
-    <PackageReference Include="FluentAssertions" Version="6.2.0" />
-    <PackageReference Include="GitHubActionsTestLogger" Version="1.2.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="CliWrap" Version="3.4.1" />
+    <PackageReference Include="FluentAssertions" Version="6.5.1" />
+    <PackageReference Include="GitHubActionsTestLogger" Version="1.3.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" PrivateAssets="all" />
-    <PackageReference Include="coverlet.msbuild" Version="3.1.0" PrivateAssets="all" />
+    <PackageReference Include="coverlet.msbuild" Version="3.1.2" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
