--- a/YoutubeExplode.Converter.Tests/YoutubeExplode.Converter.Tests.csproj
+++ b/YoutubeExplode.Converter.Tests/YoutubeExplode.Converter.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="CliWrap" Version="3.4.1" />
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="GitHubActionsTestLogger" Version="1.3.0" PrivateAssets="all" />
+    <PackageReference Include="Gress" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" PrivateAssets="all" />
