--- a/YoutubeExplode.Converter/YoutubeExplode.Converter.csproj
+++ b/YoutubeExplode.Converter/YoutubeExplode.Converter.csproj
@@ -3,7 +3,12 @@
   <PropertyGroup>
     <TargetFrameworks>net5.0;netstandard2.1;netstandard2.0;net461;netcoreapp3.0</TargetFrameworks>
     <IsPackable>true</IsPackable>
-    <Description>Extension for YoutubeExplode that provides an interface to download and convert videos using FFmpeg</Description>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Description>
+      Extension for YoutubeExplode that provides an interface to download and convert videos using FFmpeg
+    </Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
