--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  
   <PropertyGroup>
     <TargetFrameworks>net5.0;netstandard2.1;netstandard2.0;net461;netcoreapp3.0</TargetFrameworks>
     <IsPackable>true</IsPackable>
@@ -13,6 +13,10 @@
     </Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <None Include="Sanctions.targets" Pack="true" PackagePath="build" />
+  </ItemGroup>
 
   <ItemGroup>
     <!-- Higher versions of AngleSharp are incompatible with netcoreapp3.0 target framework -->
